Archive2/3c/90032019ea00ab/output
main.cpp:9:5: error: static_assert failed "They're not the same."
    static_assert(std::is_same<int[], int*>::value, "They're not the same.");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:14:5: error: static_assert failed "Again, not the same."
    static_assert(sizeof arr == sizeof p, "Again, not the same.");
    ^             ~~~~~~~~~~~~~~~~~~~~~~
main.cpp:19:5: error: no matching function for call to 'foo'
    foo(p);
    ^~~
main.cpp:5:6: note: candidate template ignored: could not match 'int [N]' against 'int *'
void foo(int(&)[N]) {   
     ^
3 errors generated.
